--- a/frontend/a4-meus-servicos.html
+++ b/frontend/a4-meus-servicos.html
@@ -12,7 +12,10 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="css/b4.css">
+    <link rel="stylesheet" href="css/a4.css">
+<script src="js/index.js"></script>
+
+
 </head>
 
 <body>
@@ -23,41 +26,39 @@
 
                 <nav class="ms-auto ">
                     <ul class="header-ul">
-                        <a href="#" class="header-nav-a1 active ">Meus Serviços</a>
-                        <a href="#" class="header-nav-a2 noactive">Minha Agenda</a>
+                        <a href="a3-agendar-servico.html" class="header-nav-a1 noactive ">Agendar Serviços</a>
+                        <a href="a4-meus-servicos.html" class="header-nav-a2 active">Meus Agendamentos</a>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
 
-    <div class="container container-main">
-        <h2></h2>
-        <div class="container row " id="div">
 
-            <form>
-
-                <div class="col-12 div-select">
-                    <p class="p">Nome:</p>
-                    <input class="select-bar" type="text" name="" id="">
+    <main>
+        <div class="container container-main" id="div-p">
+            <div class="row">
+                <div  class="div-p">
+                    <p class="p">Meus Agendamentos:</p>
                 </div>
+                <div id="agenda">
 
-                <div class="col-12 div-select">
-                    <p class="p">Descrição:</p>
-                    <textarea class="select-bar"name="" id="" cols="30" rows="10"></textarea>
                 </div>
+                <!-- <div class="div-p" id="div-p"> -->
+                    <!-- <div class="alert alert-success div-agendamento">
+                        <p><strong class="a1">Instalação</strong> <a href="index.html"><img class="a1-img" src="img/edit_square_FILL0_wght400_GRAD0_opsz48.png" alt=""></a> <a  href="b1-login.html"><img class="a2-img" src="img/delete_FILL0_wght400_GRAD0_opsz48.png" alt=""></a></p>
+                        <p><strong>Cliente:</strong></p>
+                        <p><strong>Dia:</strong></p>
+                        <p><strong>Horario:</strong></p>
 
+                    </div> -->
+                    
 
-                <div class="div-botao-b4" id="botao">
-                    <button class="w-100 btn btn-lg btn-primary botao-b4" id="btnSubmit"
-                        type="submit">CADASTRAR</button>
-                </div>
-
-
-            </form>
-
+                <!-- </div> -->
+            </div>
         </div>
-    </div>
+    </main>
+
 
 
     <footer>
@@ -79,6 +80,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+
 </body>
+
+
 
 </html>
