--- a/frontend/a4-meus-servicos.html
+++ b/frontend/a4-meus-servicos.html
@@ -36,26 +36,13 @@
 
 
     <main>
-        <div class="container container-main" id="div-p">
+        <div class="container container-main">
             <div class="row">
                 <div  class="div-p">
                     <p class="p">Meus Agendamentos:</p>
                 </div>
-                <div id="agenda">
-
+                <div class="pad" id="div-p">
                 </div>
-                <!-- <div class="div-p" id="div-p"> -->
-                    <!-- <div class="alert alert-success div-agendamento">
-                        <p><strong class="a1">Instalação</strong> <a href="index.html"><img class="a1-img" src="img/edit_square_FILL0_wght400_GRAD0_opsz48.png" alt=""></a> <a  href="b1-login.html"><img class="a2-img" src="img/delete_FILL0_wght400_GRAD0_opsz48.png" alt=""></a></p>
-                        <p><strong>Cliente:</strong></p>
-                        <p><strong>Dia:</strong></p>
-                        <p><strong>Horario:</strong></p>
-
-                    </div> -->
-                    
-
-                <!-- </div> -->
-            </div>
         </div>
     </main>
 
