--- a/frontend/b2-cadastrar-servidor.html
+++ b/frontend/b2-cadastrar-servidor.html
@@ -33,7 +33,7 @@
 
             <main class="form-signin row">
                 <form class=" row"id="form-signin" novalidate>
-                    <h1 class="h3 mb-3 fw-normal container-h2-b2">Cadastro de usuário</h1>
+                    <h1 class="h3 mb-3 fw-normal container-h2-b2">Cadastro de Funcionário</h1>
     
                     <div id="div-nome">
                         <label for="inputNome">Nome:</label>
@@ -55,7 +55,7 @@
                     </div>
     
                     <div class="div-botao-b2" id="botao">
-                        <button class="w-100 btn btn-lg btn-primary botao-b2" id="btnSubmit" type="submit">CADASTRAR</button>
+                        <button onclick="myFunction()" class="w-100 btn btn-lg btn-primary botao-b2" id="btnSubmit" type="submit">CADASTRAR</button>
                     </div>
                 </form>
             </main>
