--- a/frontend/b2-cadastrar-servidor.html
+++ b/frontend/b2-cadastrar-servidor.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-Br">
-
+<!-- pagina de cadastro de SERVIDOR -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>agendapp - Cadastro Prestador</title>
+
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
