--- a/frontend/b4-cadastrar-servicos.html
+++ b/frontend/b4-cadastrar-servicos.html
@@ -13,6 +13,9 @@
 
     <!-- Custom css -->
     <link rel="stylesheet" href="css/b4.css">
+
+    <!-- custom js -->
+    <script src="js/b4-cadastrar-servicos.js"></script>
 </head>
 
 <body>
@@ -35,16 +38,16 @@
         <h2></h2>
         <div class="container row " id="div">
 
-            <form>
+            <form id="forms-signin">
 
                 <div class="col-12 div-select">
                     <p class="p">Nome:</p>
-                    <input class="select-bar" type="text" name="" id="">
+                    <input class="select-bar" type="text" name="" id="inputNome">
                 </div>
 
                 <div class="col-12 div-select">
                     <p class="p">Descrição:</p>
-                    <textarea class="select-bar"name="" id="" cols="30" rows="10"></textarea>
+                    <textarea class="select-bar"name="" id="inputDescricao" cols="30" rows="10"></textarea>
                 </div>
 
 
