atualizaçao geral projeto 70% concluido

--- a/frontend/pages/cadastrar-prestador.html
+++ b/frontend/pages/cadastrar-prestador.html
@@ -12,10 +12,10 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="../css/a2.css">
+    <link rel="stylesheet" href="../css/cadastrar.css">
 
     <!-- Custom JS -->
-    <script src="../js/cadastrar-user.js" defer></script>
+    <script src="../js/cadastrar-prestador.js" defer></script>
 
 </head>
 
@@ -34,7 +34,7 @@
 
             <main class="form-signin row">
                 <form class=" row"id="form-signin" novalidate>
-                    <h1 class="h3 mb-3 fw-normal container-h2-a2">Cadastro de usuário</h1>
+                    <h1 class="h3 mb-3 fw-normal container-h2-a2">Cadastro de Prestador</h1>
     
                     <div id="div-nome">
                         <label for="inputNome">Nome:</label>
