--- a/frontend/pages/cadastrar-servicos.html
+++ b/frontend/pages/cadastrar-servicos.html
@@ -12,7 +12,10 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="../css/b4.css">
+    <link rel="stylesheet" href="../css/cadastrar-servicos.css">
+
+    <!-- custom js -->
+    <script src="../js/cadastrar-servicos.js" defer></script>
 </head>
 
 <body>
@@ -23,8 +26,8 @@
 
                 <nav class="ms-auto ">
                     <ul class="header-ul">
-                        <a href="#" class="header-nav-a1 active ">Meus Serviços</a>
-                        <a href="#" class="header-nav-a2 noactive">Minha Agenda</a>
+                        <a href="./servicos-cadastrados.html" class="header-nav-a1 active ">Meus Serviços</a>
+                        <a href="./minha-agenda.html" class="header-nav-a2 noactive">Minha Agenda</a>
                     </ul>
                 </nav>
             </div>
@@ -35,16 +38,16 @@
         <h2></h2>
         <div class="container row " id="div">
 
-            <form>
+            <form id="forms" novalidate>
 
-                <div class="col-12 div-select">
+                <div class="col-12 div-nome">
                     <p class="p">Nome:</p>
-                    <input class="select-bar" type="text" name="" id="">
+                    <input class="select-bar " type="text" name="" id="nome">
                 </div>
 
                 <div class="col-12 div-select">
                     <p class="p">Descrição:</p>
-                    <textarea class="select-bar"name="" id="" cols="30" rows="10"></textarea>
+                    <textarea class="select-bar "name="" id="descricao" cols="30" rows="10"></textarea>
                 </div>
 
 
