--- a/frontend/pages/minha-agenda.html
+++ b/frontend/pages/minha-agenda.html
@@ -12,8 +12,8 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="../css/agenda-cliente.css">
-<script src="../js/agenda-cliente.js"></script>
+    <link rel="stylesheet" href="../css/minha-agenda.css">
+<script src="../js/minha-agenda.js"></script>
 
 
 </head>
@@ -26,8 +26,8 @@
 
                 <nav class="ms-auto ">
                     <ul class="header-ul">
-                        <a href="agendar-servico.html" class="header-nav-a1 noactive ">Agendar Serviços</a>
-                        <a href="agenda-cliente.html" class="header-nav-a2 active">Meus Agendamentos</a>
+                        <a href="./servicos-cadastrados.html" class="header-nav-a1 noactive ">Meus Serviços</a>
+                        <a href="./minha-agenda.html" class="header-nav-a2 active">Minha Agenda</a>
                     </ul>
                 </nav>
             </div>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="pad" id="div-p">
                     <div class="alert alert-danger div-alerta text-center " id="div-p-alert">
-                        <p class="p-alert"> <strong> Você ainda não tem nenhum agendamento </strong> </p>
+                        <p class="p-alert"> <strong> Você ainda não tem nenhum serviço cadastrado </strong> </p>
                     </div>
                 </div>
         </div>
