--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,10 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="css/b1.css">
+    <link rel="stylesheet" href="css/index.css">
+
+    <!-- custom js -->
+    <script src="./js/index.js" defer></script>
 </head>
 
 <body>
