--- a/frontend/pages/agendar-servico.html
+++ b/frontend/pages/agendar-servico.html
@@ -12,7 +12,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="../css/a3.css">
+    <link rel="stylesheet" href="../css/agenda-servico.css">
 </head>
 
 <body>
@@ -38,24 +38,22 @@
             <div class="container row " id="div">
                 <div class="col-12 div-select">
                     <p class="p">Selecione o Serviço:</p>
-                    <select class="form-select botao-bar" aria-label="Default select example">
-                        <option selected></option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                    <select class="form-select botao-bar" aria-label="Default select example" id="servico-options">
+                        <option selected>Selecione um serviço</option>
+
                     </select>
                 </div>
 
                 <div class="col-7 div-data">
                     <p class="p-data">Data:</p>
-                    <input class = "data"type="date">
+                    <input class = "data"type="date" id="data">
                 </div>
                 <div class="col-5 div-hora">
                     <p class="p">Hora:</p>
-                    <input class="botao-bar text-center" type="time" name="" id="">
+                    <input class="botao-bar text-center" type="time" name="" id="hora">
                 </div>
                 <div class="div-botao-a3" id="botao">
-                    <button onclick="agendarServico()" class="w-100 btn btn-lg btn-primary botao-a3" id="btnSubmit" type="submit">AGENDAR</button>
+                    <button class="w-100 btn btn-lg btn-primary botao-a3" id="btnSubmit" type="submit">AGENDAR</button>
                 </div>
 
             </div>
@@ -81,6 +79,7 @@
         </div>
     </footer>
 
+    <script src="../js/agendar-servico.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
