--- a/frontend/pages/cadastro.html
+++ b/frontend/pages/cadastro.html
@@ -14,8 +14,6 @@
     <!-- Custom css -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- js -->
-    <script src="../js/index.js"></script>
 </head>
 
 <body>
@@ -36,18 +34,18 @@
 
         <div class="row">
             <div class="card col-ex-12 col-sm-5" style="width: 18rem;">
-                <img class="card-img-top img-card1" src="img/client.png" alt="Card image cap">
+                <img class="card-img-top img-card1" src="../img/client.png" alt="Card image cap">
                 <div class="card-body botao-cards text-center">
-                    <a onClick="mandarServidor('Cliente')" href="cadastrar-user.html" class="btn botao-color">CLIENTE</a>
+                    <a onClick="mandarServidor('Cliente')" href="cadastrar-cliente.html" class="btn botao-color" value = '1'>CLIENTE</a>
                 </div>
             </div>
 
             <div class="col-ex-12 col-sm-2 vazio"> <br><br> </div>
 
             <div class="card col-ex-12 col-sm-5" style="width: 18rem;">
-                <img class="card-img-top img-card2" src="img/trabalhador.png" alt="Card image cap">
+                <img class="card-img-top img-card2" src="../img/trabalhador.png" alt="Card image cap">
                 <div class="card-body botao-cards text-center">
-                    <a onClick="mandarServidor('Prestador')" href="cadastrar-user.html" class="btn botao-color">PRESTADOR</a>
+                    <a onClick="mandarServidor('Prestador')" href="cadastrar-prestador.html" class="btn botao-color" value = "2">PRESTADOR</a>
                 </div>
             </div>
         </div>
