--- a/frontend/pages/editar-agendamento.html
+++ b/frontend/pages/editar-agendamento.html
@@ -5,17 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agendamentos do Cliente | agendapp</title>
+    <title>Agendar serviço | agendapp</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="../css/agenda-cliente.css">
-<script src="../js/agenda-cliente.js"></script>
-
-
+    <link rel="stylesheet" href="../css/editar-agendamento.css">
 </head>
 
 <body>
@@ -26,29 +23,46 @@
 
                 <nav class="ms-auto ">
                     <ul class="header-ul">
-                        <a href="agendar-servico.html" class="header-nav-a1 noactive ">Agendar Serviços</a>
-                        <a href="agenda-cliente.html" class="header-nav-a2 active">Meus Agendamentos</a>
+                        <a href="agendar-servico.html" class="header-nav-a1 active ">Agendar Serviços</a>
+                        <a href="agenda-cliente.html" class="header-nav-a2 noactive">Meus Agendamentos</a>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
 
+    <div class="container container-main">
+        <h2></h2>
 
-    <main>
-        <div class="container container-main">
-            <div class="row">
-                <div  class="div-p">
-                    <p class="p">Meus Agendamentos:</p>
+        <form>
+            <div class="container row " id="div">
+                <div class="col-12 div-select">
+                    <p class="p">Selecione o Serviço:</p>
+                    <select class="form-select botao-bar" aria-label="Default select example">
+                        <option selected></option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
                 </div>
-                <div class="pad" id="div-p">
-                    <div class="alert alert-danger div-alerta text-center " id="div-p-alert">
-                        <p class="p-alert"> <strong> Você ainda não tem nenhum agendamento </strong> </p>
-                    </div>
-                </div>
-        </div>
-    </main>
 
+                <div class="col-7 div-data">
+                    <p class="p-data">Data:</p>
+                    <input class = "data "type="date">
+                </div>
+                <div class="col-5 div-hora">
+                    <p class="p">Hora:</p>
+                    <input class="botao-bar text-center" type="time" name="" id="">
+                </div>
+                <div class="div-botao-a3" id="botao">
+                    <button onclick="agendarServico()" class="w-100 btn btn-lg btn-primary botao-a3" id="btnSubmit" type="submit">AGENDAR</button>
+                </div>
+
+            </div>
+
+        </form>
+
+    </div>
 
 
     <footer>
@@ -70,9 +84,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-
 </body>
-
-
 
 </html>
