--- a/frontend/pages/editar-servicos.html
+++ b/frontend/pages/editar-servicos.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agendamentos do Cliente | agendapp</title>
+    <title>Document</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="../css/agenda-cliente.css">
-<script src="../js/agenda-cliente.js"></script>
+    <link rel="stylesheet" href="../css/minha-agenda.css">
 
-
+    <!-- custom js -->
+    <script src="../js/cadastrar-servicos.js" defer></script>
 </head>
 
 <body>
@@ -26,29 +26,41 @@
 
                 <nav class="ms-auto ">
                     <ul class="header-ul">
-                        <a href="agendar-servico.html" class="header-nav-a1 noactive ">Agendar Serviços</a>
-                        <a href="agenda-cliente.html" class="header-nav-a2 active">Meus Agendamentos</a>
+                        <a href="./servicos-cadastrados.html" class="header-nav-a1 active ">Meus Serviços</a>
+                        <a href="./minha-agenda.html" class="header-nav-a2 noactive">Minha Agenda</a>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
 
+    <div class="container container-main">
+        <h2></h2>
+        <div class="container row " id="div">
 
-    <main>
-        <div class="container container-main">
-            <div class="row">
-                <div  class="div-p">
-                    <p class="p">Meus Agendamentos:</p>
+            <form id="forms" novalidate>
+
+                <div class="col-12 div-nome">
+                    <p class="p">Nome:</p>
+                    <input class="select-bar " type="text" name="" id="nome">
                 </div>
-                <div class="pad" id="div-p">
-                    <div class="alert alert-danger div-alerta text-center " id="div-p-alert">
-                        <p class="p-alert"> <strong> Você ainda não tem nenhum agendamento </strong> </p>
-                    </div>
+
+                <div class="col-12 div-select">
+                    <p class="p">Descrição:</p>
+                    <textarea class="select-bar "name="" id="descricao" cols="30" rows="10"></textarea>
                 </div>
+
+
+                <div class="div-botao-b4" id="botao">
+                    <button class="w-100 btn btn-lg btn-primary botao-b4" id="btnSubmit"
+                        type="submit">CADASTRAR</button>
+                </div>
+
+
+            </form>
+
         </div>
-    </main>
-
+    </div>
 
 
     <footer>
@@ -70,9 +82,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-
 </body>
-
-
 
 </html>
